--- a/package.json
+++ b/package.json
@@ -3,17 +3,35 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "https-proxy": "local-ssl-proxy --key ./localhost-key.pem --cert localhost.pem --source 3001 --target 3000"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@reduxjs/toolkit": "^1.8.2",
+    "@svgr/webpack": "^6.2.1",
+    "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
+    "eslint": "^8.18.0",
+    "local-ssl-proxy": "^1.3.0",
     "next": "latest",
     "next-pwa": "^5.4.1",
+    "prettier": "^2.7.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-aria": "^3.17.0",
+    "react-dom": "^17.0.2",
+    "react-redux": "^8.0.2",
+    "react-stately": "^3.15.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.1",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
     "typescript": "4.5.4"
   }
 }
