--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "lint": "next lint",
     "https-proxy": "local-ssl-proxy --key ./localhost-key.pem --cert localhost.pem --source 3001 --target 3000"
   },
   "dependencies": {
-    "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@reduxjs/toolkit": "^1.8.2",
     "@svgr/webpack": "^6.2.1",
+    "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "eslint": "^8.18.0",
+    "eslint-plugin-jsx-a11y": "^6.6.0",
     "local-ssl-proxy": "^1.3.0",
     "next": "latest",
     "next-pwa": "^5.4.1",
@@ -25,11 +27,22 @@
     "react-stately": "^3.15.0"
   },
   "devDependencies": {
+    "@emotion/react": "^11.9.3",
+    "@next/eslint-plugin-next": "^12.2.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.1",
     "@types/node": "17.0.4",
-    "@types/react": "17.0.38",
+    "@types/react": "^18.0.14",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.2.5",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import-alias": "^1.2.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^28.1.1",
     "jest-environment-jsdom": "^28.1.1",
     "typescript": "4.5.4"
