--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "lint": "next lint",
     "https-proxy": "local-ssl-proxy --key ./localhost-key.pem --cert localhost.pem --source 3001 --target 3000"
   },
+  "prettier": ".pretteierrc",
   "dependencies": {
     "@emotion/styled": "^11.9.3",
+    "@google-cloud/storage": "^6.2.3",
+    "@next-auth/prisma-adapter": "^1.0.4",
+    "@prisma/client": "4.1.0",
     "@reduxjs/toolkit": "^1.8.2",
     "@svgr/webpack": "^6.2.1",
     "@types/react-dom": "^18.0.5",
@@ -18,7 +22,9 @@
     "eslint-plugin-jsx-a11y": "^6.6.0",
     "local-ssl-proxy": "^1.3.0",
     "next": "latest",
+    "next-auth": "^4.10.2",
     "next-pwa": "^5.4.1",
+    "nodemailer": "^6.7.7",
     "prettier": "^2.7.1",
     "react": "^17.0.2",
     "react-aria": "^3.17.0",
@@ -32,7 +38,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.1",
-    "@types/node": "17.0.4",
+    "@types/node": "^18.0.6",
     "@types/react": "^18.0.14",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
@@ -45,6 +51,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^28.1.1",
     "jest-environment-jsdom": "^28.1.1",
+    "prisma": "^4.1.0",
     "typescript": "4.5.4"
   }
 }
